adapted location history endpoint to accept a date range.
